@@ -1294,6 +1294,51 @@ def test_distinct_updates():
     
     """
     
+#test ManyToMany
+def test_manytomany_delete():
+    """
+    >>> #set_debug_query(True)
+    >>> db = get_connection('sqlite://')
+    >>> db.metadata.drop_all()
+    >>> class User(Model):
+    ...     username = Field(unicode)
+    >>> class Group(Model):
+    ...     name = Field(str)
+    ...     users = ManyToMany(User)
+    >>> a = User(username='limodou')
+    >>> a.save()
+    True
+    >>> b = User(username='user')
+    >>> b.save()
+    True
+    >>> c = User(username='abc')
+    >>> c.save()
+    True
+    >>> g1 = Group(name='python')
+    >>> g1.save()
+    True
+    >>> g2 = Group(name='perl')
+    >>> g2.save()
+    True
+    >>> g3 = Group(name='java')
+    >>> g3.save()
+    True
+    >>> g1.users.add(a)
+    True
+    >>> g1.users.add(b, 3) #add can support multiple object, and object can also int
+    True
+    >>> g1.users.add(a, b)  #can has duplicated records
+    False
+    >>> list(g1.users.all())
+    [<User {'username':u'limodou','id':1}>, <User {'username':u'user','id':2}>, <User {'username':u'abc','id':3}>]
+    >>> list(do_(Group.users.table.select()))
+    [(1, 1), (1, 2), (1, 3)]
+    >>> g1.delete()
+    >>> list(do_(Group.users.table.select()))
+    []
+    
+    """
+    
 #if __name__ == '__main__':
 #    db = get_connection('sqlite://')
 #    db.metadata.drop_all()
